:wrench: [hardware] fix #219 ProductsList on hardware page "Andre kiggede også på" should transition in from right on mobile.

--- a/src/styles/products-list.scss
+++ b/src/styles/products-list.scss
@@ -27,6 +27,12 @@
       @include breakpoint-max($bp-medium) {
         padding-left: 20px;
       }
+
+      @include breakpoint-min($bp-medium) {
+        &.aos-animate {
+          transition-property: none;
+        }
+      }
     }
   }
 
